# Hospital-App-C-

./: README.md
PP Proiect C++/: CMakeLists.txt  FileIO.cpp  FileIO.h  FisaMedicala.cpp  FisaMedicala.h  Medic.cpp  Medic.h  MedicMenuFunctions.cpp  MedicMenuFunctions.h  MenuFunctions.cpp  MenuFunctions.h  MenuInterf.cpp  MenuInterf.h  Pacient.cpp  Pacient.h  PacientMenuFunctions.cpp  PacientMenuFunctions.h  Persoana.cpp  Persoana.h  fise.csv  medici.csv  pacienti.csv
