cmake_minimum_required(VERSION 3.28)
project(PP_Proiect_C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(PP_Proiect_C__ main.cpp
        Persoana.h
        Persoana.h
        Persoana.cpp
        Pacient.h
        Pacient.cpp
        Medic.h
        Medic.cpp
        FisaMedicala.h
        FisaMedicala.cpp
        MenuInterf.h
        MenuInterf.cpp
        MenuFunctions.cpp
        MenuFunctions.h
        FileIO.cpp
        FileIO.h
        PacientMenuFunctions.cpp
        PacientMenuFunctions.h
        MedicMenuFunctions.cpp
        MedicMenuFunctions.h
)
